--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@
                 CHANGES IN h5r VERSION 1.0
 
 NEW FEATURES
+    o Added proper test harness.
+    o Added support for hyperslab selection.
     o Added support for string attributes and multi-dim string datasets.
     o Added support for 1-d attributes of type: String, Float, and Integer.
 
