--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@
                 CHANGES IN h5r VERSION 1.0
 
 NEW FEATURES
+    o Added a way to inspect whats in the h5 file: listH5Contents.
     o Added proper test harness.
     o Added support for hyperslab selection.
     o Added support for string attributes and multi-dim string datasets.
