git-svn-id: svn://svn.r-forge.r-project.org/svnroot/h5r@22 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/NEWS
+++ b/NEWS
@@ -15,3 +15,4 @@ NEW FEATURES
     o Added support for 1-d attributes of type: String, Float, and Integer.
 
 BUG FIXES
+    o Allowed fixed-length strings.
