A number of changes to facilitate writing.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/h5r@45 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,22 @@
         **************************************************
         *                                                *
+        *              1.1 SERIES NEWS                   *
+        *                                                *
+        **************************************************
+
+
+                CHANGES IN h5r VERSION 1.1
+
+NEW FEATURES
+    o Added native ability to read sets of 1-D slabs.
+    o Added basic writing capabilities
+
+BUG FIXES
+    o 
+
+
+        **************************************************
+        *                                                *
         *              1.0 SERIES NEWS                   *
         *                                                *
         **************************************************
