--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,24 @@
         **************************************************
         *                                                *
+        *              1.3 SERIES NEWS                   *
+        *                                                *
+        **************************************************
+
+
+                CHANGES IN h5r VERSION 1.3
+
+NEW FEATURES
+    o Added Windows support thanks to the rhdf5 package.
+   
+
+        **************************************************
+        *                                                *
         *              1.2 SERIES NEWS                   *
         *                                                *
         **************************************************
 
 
-                CHANGES IN h5r VERSION 1.1
+                CHANGES IN h5r VERSION 1.2
 
 NEW FEATURES
     o Added 'ls' function
