--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,20 @@
         **************************************************
         *                                                *
+        *              1.4 SERIES NEWS                   *
+        *                                                *
+        **************************************************
+
+
+                CHANGES IN h5r VERSION 1.4
+
+NEW FEATURES
+    o Added real Windows support thanks to Mengjuei Hsieh
+    o Added support to read fixed length character strings
+    o Large cleanup of the C interface file
+
+
+        **************************************************
+        *                                                *
         *              1.3 SERIES NEWS                   *
         *                                                *
         **************************************************
