Changed the INSTALL file to remove the note about trying to compile on windows. Added the SystemRequirements field.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/h5r@97 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/INSTALL
+++ b/INSTALL
@@ -1,22 +1,16 @@
 INSTALLATION INSTRUCTIONS FOR THE h5r R PACKAGE
 
 Currently, this package works and has been tested with >= hdf5-1.8.4
-(we build with 1.8.8) on Mac OSX, Linux, and Windows. The package will
-most likely work on most POSIX systems where R (>= 2.10) works. 
-
-The hdf group (http://www.hdfgroup.org) provides binaries for common
-platforms. Unfortunately, the binaries they provide for Windows
-platforms are not compatible with R because they are based on
-Microsoft's compiler. Therefore, we provide MinGw-based static
-libraries to compile against. It is non-trivial to get a functioning
-MinGW-based Windows binary. These binaries are available in the source
-download at R-forge under the 'windows' directory.
+on Mac OSX, Linux, and Windows. 
 
 Unix
 ----
 
-To install, a working hdf5 installation must exist. This can be
-downloaded at: http://www.hdfgroup.org/downloads/index.html#hdf5
+To install h5r, a working hdf5 installation must exist. This can be
+downloaded at: http://www.hdfgroup.org/downloads/index.html#hdf5 or
+on a debian based system:
+
+sudo apt-get install libhdf5-serial libhdf5-serial-dev
 
 If the hdf5 libraries and header files are installed in standard
 places (/usr, /usr/local) then the configure script should pick them
@@ -29,21 +23,15 @@ R CMD INSTALL --configure-args="--with-hdf5=$HDF5_HOME" h5r
 If you install to a non-standard location like this, then you must set
 your LD_LIBRARY_PATH environment variable to contain the directory:
 $HDF5_HOME/libs, otherwise, at run-time, there will be no means to
-find the hdf5.so. 
+find hdf5.so. 
 
 WINDOWS
 -------
 
 The easiest way to get a working Windows version is to download the
-pre-built version from CRAN. However, if a user wants to build from
-scratch then they should directly download from the source repostitory
-at: https://r-forge.r-project.org/projects/h5r/
-
-That download will have pre-built static hdf5 libraries. One can then
-just build using 'R CMD INSTALL h5r' 
+pre-built version from CRAN.
 
 
 HELP
 ----
-Please contact jbullard@pacificbiosciences.com if you have any
-questions.
+Please contact extemporaneousb@yahoo.com if you have any questions.
